# python-pdb-reader

./: README.md  main.py  pdbconvert.py  pdbheader.py  pdbread.py  pdbwrite.py  pyproject.toml  recordheader.py  setup.cfg  setup.py
examples/: main.py
examples/pdbs/: README.md
pdbtypes/: __init__.py  big_endian_int.py  doc.py  fixed_length_string.py  fixed_size_ints.py  null_terminated_string.py  pdb_type_base.py  pdbtype.py
pypalm/: __init__.py
pypalm/pdbconvert/: __init__.py
pypalm/pdbheaders/: pdbheader.py  recordheader.py
pypalm/pdbtemplates/: file_loaded_template.py  template.py
pypalm/pdbtype/: __init__.py  big_endian_int.py  fixed_length_string.py  fixed_size_ints.py  palm_time.py  pdbtype_base.py  pdbtypes_template.py
src/pypalm/pdbheaders/: pdbheader.py  recordheader.py
src/pypalm/pdbtemplates/: file_loaded_template.py  template.py
src/pypalm/pdbtype/: __init__.py  big_endian_int.py  fixed_length_string.py  fixed_size_ints.py  null_terminated_string.py  palm_time.py  pdbtype_base.py
src/pypalmdb/: __init__.py
src/pypalmdb/pdbconvert/: pdbconvert.py
src/pypalmdb/pdbheaders/: __init__.py
src/pypalmdb/pdbtemplates/: __init__.py  template.py
src/pypalmdb/pdbtype/: big_endian_int.py  null_terminated_string.py  pdbtype_base.py
test/: test.py
tests/: test_files.py  test_pdbconvert.py  test_pdbheaders.py  test_pdbtemplates.py  test_pdbtype.py
